# koubokuang

./: .env.example  .gitignore  DEPLOY.md  README.md  README_AGENT.md  docker-compose.yml  start.sh  start_all.sh
backend/: .gitignore  Dockerfile  __init__.py  llm_provider.py  pyproject.toml  schemas.py
backend/agent/: __init__.py  errors.py  intent_classifier.py  prompts.py  remix_agent.py  state.py
backend/agent/memory/: __init__.py  manager.py  session.py
backend/agent/middleware/: __init__.py  context_compression.py  multimodal_injection.py  token_tracking.py
backend/agent/stream/: __init__.py  emitter.py  processor.py  reasoning_extractor.py  think_tag_fsm.py
backend/agent/tools/: __init__.py  fetch_content_tool.py  link_parser_tool.py  lipsync_generate_tool.py  text_to_speech_tool.py  video_processor_tool.py  voice_clone_tool.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/middleware/: usage_logging.py
backend/api/routes/: __init__.py  admin.py  auth.py  cookies.py  health.py  insight_modes.py  llm_config.py  media_ai.py  remix.py  sse_helpers.py
backend/assets/fonts/: fonts.css
backend/assets/logos/: README.md
backend/config/: __init__.py  brand_logos.py  settings.py
backend/db/: __init__.py  base.py  mysql_checkpointer.py  mysql_store.py  utils.py
backend/i18n/: __init__.py  middleware.py  translator.py
backend/schema/: 00_init_databases.sql  01_platform_cookies.sql  02_llm_configs.sql  03_insight_modes.sql  agent_memory_ddl.sql  init_all.sql
backend/scripts/: download_brand_logos.py  run_api_server.py  run_migrations.py  set_admin.py  test_agent_e2e.py  test_anthropic_llm.py  test_bcut_asr.py  test_dynamic_prompt.py  test_llm_logging.py  test_mysql_memory.py  test_openai_llm.py  test_reasoning.py  test_tools.py
backend/services/: __init__.py  asr_service.py  asset_storage.py  audio_extractor.py  auth_service.py  bootstrap_service.py  cookies_service.py  download_server_client.py  email_service.py  image_utils.py  insight_mode_service.py  link_parser.py  llm_config_service.py  logo_downloader.py  media_ai_source_service.py  media_ai_store.py  migration_service.py  oauth_client.py  syncso_client.py  title_generator.py  tts_expression_service.py  tts_llm_tag_service.py  tts_tag_service.py  usage_service.py  video_downloader.py  video_merger.py  voice_style_profile_store.py  voicv_client.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_asr_service.py  test_context_compression.py  test_link_parser.py  test_reasoning_extractor.py  test_video_downloader.py
backend/utils/: __init__.py  chat_openai_with_reasoning.py  error_formatter.py  error_handlers.py  json_utils.py  llm_callbacks.py  logger.py
config/: README.md
(+136 files in other folders)
